k8s/prod/resources.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plataforma-clima-prod
  namespace: plataforma-clima
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plataforma-clima-prod
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: plataforma-clima-prod
    spec:
      containers:
        - name: plataforma-clima
          image: gcr.io/project-id/plataforma-clima
          resources:
            requests:
              cpu: 250m
              memory: 1Gi
            limits:
              cpu: 250m
              memory: 1Gi
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 60
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 60
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
      restartPolicy: Always

---
# Service
apiVersion: v1
kind: Service
metadata:
  labels:
    app: plataforma-clima-prod
  name: plataforma-clima-prod
  namespace: plataforma-clima
spec:
  ports:
    - name: "http"
      port: 80
      targetPort: 3000
  selector:
    app: plataforma-clima-prod

---
# Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plataforma-clima-prod
  namespace: plataforma-clima
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - plataforma-clima.dados.rio
      secretName: plataforma-clima-prod-tls
  rules:
    - host: plataforma-clima.dados.rio
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: plataforma-clima-prod
                port:
                  number: 80
